Updates the documentation regarding, quickstart for java/scala. Updates developer-guide.md with ready made POM blocks as starters. auto-inject Spark's --add-opens into Surefire
Spark requires deep reflection into JDK internals (Netty direct
buffers, Kryo field access, codegen method handles). On modular JDKs
(9+) the module system blocks that unless the JVM starts with
--add-opens flags; without them the driver dies with
InaccessibleObjectException before the first test runs.

This repo's own tests got the flags from the root POM's
spark.test.jvm.args. Downstream projects inherit nothing, so their
Surefire forks started bare and crashed on the first reflective
access. SurefireConfigurator now merges the flag set into Surefire's
argLine automatically — opt-out via
spark.mutator.injectAddOpens=false, no-op on Java 8 where the flags
do not exist.

Also adds a reactor-safe gate mode: a failed quality gate can throw
MojoFailureException (spark.mutator.exitProcessOnGateFailure=false)
instead of calling System.exit(2), so multi-module reactors can honor
--fail-at-end and still build remaining modules. Default remains
exit-2